--- a/code/signup.css
+++ b/code/signup.css
@@ -114,7 +114,7 @@ header {
     margin-top: 0;
     list-style: none;
     display: flex;
-    justify-content:flex-end;
+    justify-content:center;
     margin: 0px;
     max-block-size: 100%;
     background: grey;
@@ -123,9 +123,10 @@ header {
   
     .nq-logo {
     height: 110px;
-    margin-right: auto;
     padding: 0px;
   }
+
+
   header nav ul li a {
     text-decoration:none;
     color: white;
